test/conformance/chainsaw/validate/clusterpolicy/standard/psa/test-exclusion-running-as-nonRoot/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-exclusion-running-as-non-root
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
