test/conformance/chainsaw/validate/clusterpolicy/standard/psa/test-exclusion-running-as-nonRoot/02-resources.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: resources
spec:
  timeouts: {}
  try:
  - apply:
      expect:
      - check:
          ($error != null): true
      file: bad-pod.yaml
  - apply:
      file: excluded-pod.yaml
  - apply:
      file: good-pod.yaml
